fixed main menu spacing
tracks internal commit 2ec50964a88d0b474aaabc5df72ad26d643e67c9

--- a/themes/slashcode/htdocs/slashcode_lite.css
+++ b/themes/slashcode/htdocs/slashcode_lite.css
@@ -1,10 +1,5 @@
 a { color: #00E; }
 
-#contents
-{
-     margin: 0 0 0 .3em;
-}
-
 #articles, #users-blocks, #polls
 {
      margin: 0 .3em 1em 0;
